App2/src/objects/Carriage__c.object
<CustomObject>
    <fields>
        <fullName>Bicycles_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bicycles Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carriage_With_Tables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carriage With Tables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffet Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disabled_People_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled People Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Seats__c</fullName>
        <label>Number Of Seats</label>
        <picklist>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Carriage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carriages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>